--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yaorongke</title>
+    <title>wanganadai</title>
 </head>
 <body>
     <h1>wanganadai的个人主页</h1>
